chore: auto snapshot 2026-09-13 08:05 UTC